# Industrial-Monitoring-Protection-Predictive-Maintenance-Platform

./: README.md
firmware/: README.txt
firmware/HMI-Codebase/: Machine_Monitor.ino
firmware/Machine_Monitor/data/: index.html  manifest.json
firmware/Safty_Module-codebase/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/Safty_Module-codebase/main/: CMakeLists.txt  Kconfig.projbuild
firmware/Safty_Module-codebase/main/comm/: espnow_link.c  espnow_link.h  pairing.c  pairing.h  telemetry.c  telemetry.h
firmware/Safty_Module-codebase/main/core/: config_manager.c  config_manager.h  system_status.c  system_status.h
firmware/Safty_Module-codebase/main/core/measurement/: measurement.c  measurement.h  sampling.h
firmware/Safty_Module-codebase/main/core/protection/: fault_handler.c  fault_handler.h  protection.c  protection.h
firmware/Safty_Module-codebase/main/core/redundancy/: cross_validation.h  heartbeat.h  redundancy.c  redundancy.h  watchdog_key.h
firmware/Safty_Module-codebase/main/core/sensor_manager/: pin_advisor.h  sensor_manager.c  sensor_manager.h  sensor_registry.h
firmware/Safty_Module-codebase/main/core/state_machine/: state_machine.h  state_run.c
firmware/Safty_Module-codebase/main/drivers/actuators/: drv_buzzer.c  drv_buzzer.h  drv_leds.c  drv_leds.h  drv_relay.c  drv_relay.h
firmware/Safty_Module-codebase/main/drivers/interface/: drv_buttons.c  drv_buttons.h  drv_lcd2004.c  drv_lcd2004.h
firmware/Safty_Module-codebase/main/drivers/sensors/: drv_ads1115.c  drv_ads1115.h  drv_current_sensor.c  drv_current_sensor.h  drv_hall_rpm.h  drv_lis344.h  drv_max9814.h  drv_mq_gas.h  drv_sht45.h  drv_voltage_sensor.c  drv_voltage_sensor.h
firmware/Safty_Module-codebase/main/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_uart.c  hal_uart.h
firmware/Safty_Module-codebase/main/hmi/: hmi_manager.c  hmi_manager.h  led_status.c  led_status.h  menu_engine.c  menu_engine.h  ui_animations.c  ui_animations.h
firmware/Safty_Module-codebase/main/hmi/menus/: menu_main.c  menu_main.h  menu_settings.c  menu_settings.h
firmware/Safty_Module-codebase/main/hmi/screens/: screen_stubs.c  screens.h
firmware/Safty_Module-codebase/main/hmi/screens/calibration/: screen_cal_auto.c  screen_cal_manual.c  screen_cal_select.c
firmware/Safty_Module-codebase/main/hmi/screens/comm/: screen_mac_entry.c  screen_pairing.c
firmware/Safty_Module-codebase/main/hmi/screens/nav/: screen_boot.c  screen_current.c  screen_fault.c  screen_gas.c  screen_home.c  screen_rpm.c  screen_system.c  screen_temp.c  screen_vibration.c  screen_voltage.c
firmware/Safty_Module-codebase/main/hmi/screens/sensors/: screen_sensor_add.c  screen_sensor_remove.c  screen_sensor_test.c  screen_sensor_view.c
firmware/Safty_Module-codebase/main/hmi/screens/settings/: screen_diagnostics.c  screen_inject_fault.c  screen_settings.c  screen_threshold.c
firmware/Safty_Module-codebase/main/utils/: crc_utils.c  crc_utils.h  debug_log.h  fast_math.h  filter.h  ring_buffer.h  time_utils.h
firmware/hmi-codebase/: app_config.h
firmware/hmi-codebase/comm/: auth_handler.c  auth_handler.h  command_link.c  command_link.h  espnow_link.c  espnow_link.h  peer_registry.c  peer_registry.h
firmware/hmi-codebase/indicators/: led_driver.c  led_driver.h  led_patterns.c  led_patterns.h
firmware/hmi-codebase/storage/: nvs_config.c  nvs_config.h
firmware/hmi-codebase/utils/: crc_utils.c  crc_utils.h  ring_buffer.c  ring_buffer.h
firmware/main/: app_config.h  idf_component.yml  main.c  system_types.h
hardware/pcb/: Button pannel.brd  LIS344ALH-old.brd  LIS344ALH.brd  acs758.brd  wroom32.brd
hardware/schematics/: Button pannel.sch  LIS344ALH-old.sch  LIS344ALH.sch  acs758.sch  psu.sch  relays.sch  wroom32.sch
safty_module_beta/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
safty_module_beta/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c  main_v1_sensor_test.c  system_types.h
safty_module_beta/main/core/: fault_handler.c  fault_handler.h  protection.h  sensor_manager.c  sensor_manager.h  state_machine.c  state_machine.h
safty_module_beta/main/drivers/: drv_Current_sensor.c  drv_Current_sensor.h  drv_Voltate_sensor.c  drv_Voltate_sensor.h  drv_ads1115.c  drv_ads1115.h  drv_buttons.c  drv_buttons.h  drv_buzzer.c  drv_buzzer.h  drv_hall_rpm.c  drv_hall_rpm.h  drv_lcd2004.c  drv_lcd2004.h  drv_leds.c  drv_leds.h  drv_mq_gas.c  drv_mq_gas.h  drv_sht45.c  drv_sht45.h
safty_module_beta/main/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_uart.c  hal_uart.h
safty_module_beta/main/hmi/: hmi_manager.c  hmi_manager.h  screen_current.c  screen_fault.c  screen_gas.c  screen_home.c  screen_settings.c  screen_system.c  screen_temp.c  screen_voltage.c  screens.h
safty_module_beta/main/storage/: default_config.c  default_config.h  nvs_config.c  nvs_config.h
safty_module_beta/main/utils/: crc_utils.c  crc_utils.h  filter.c  filter.h  ring_buffer.c  ring_buffer.h  time_utils.h
web-dashboard/data/: data.json
(+13 files in other folders)
