idf_component_register(
    SRCS
        "main.c"
        "hal/hal_gpio.c"
        "hal/hal_i2c.c"
        "hal/hal_adc.c"
        "hal/hal_uart.c"
        "drivers/drv_ads1115.c"
        "drivers/drv_voltage_sensor.c"
        "drivers/drv_current_sensor.c"
        "drivers/drv_sht45.c"
        "drivers/drv_lcd2004.c"
        "drivers/drv_buttons.c"
        "drivers/drv_leds.c"
        "drivers/drv_buzzer.c"
        "drivers/drv_mq_gas.c"
        "drivers/drv_hall_rpm.c"
        "core/sensor_manager.c"
        "core/protection.c"
        "core/fault_handler.c"
        "core/state_machine.c"
        "hmi/hmi_manager.c"
        "hmi/screen_home.c"
        "hmi/screen_voltage.c"
        "hmi/screen_current.c"
        "hmi/screen_temp.c"
        "hmi/screen_gas.c"
        "hmi/screen_settings.c"
        "hmi/screen_fault.c"
        "storage/nvs_config.c"
        "storage/default_config.c"
        "utils/crc_utils.c"
        "utils/filter.c"
        "utils/ring_buffer.c"
    INCLUDE_DIRS
        "."
        "hal"
        "drivers"
        "core"
        "hmi"
        "storage"
        "utils"
    REQUIRES
        driver
        esp_adc
        esp_timer
        nvs_flash
)